[package]
edition = '2018'
name = "arsert_impl"
version = "0.0.2-dev" # version_replace
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/arsert"
readme = "README.md"
description = "proc_macro_hack implementation for `arsert`"
documentation = "https://docs.rs/arsert"

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"

[lib]
proc-macro = true

[dependencies.arsert_failure]
path = "../arsert_failure"
version="0.0.1" # dep_replace

[dependencies]
syn = { version = "0.15.24", features = ["printing", "parsing", "full", "visit", "extra-traits"] }
proc-macro-hack = "0.5.4"
proc-macro2 = "0.4.24"
quote = "0.6.10"
